Fixed wrapping error (see notes) - Question about landing sites for monitors will now wrap correctly.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,10 +7,10 @@
   white-space: normal !important;
   padding: 0% !important;
   margin: 0% !important;
-  border: 1px solid black !important;
+  /*border: 1px solid black !important;*/
   position: relative !important;
 }
 .cs-max-width{
-  border: 1px solid black !important;
+  /*border: 1px solid black !important;*/
   width: 100% !important;
 }
